<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="title_txt">My Nanodegree Apps!</string>
    <string name="menu_movie_btn">POPULAR MOVIES</string>
    <string name="menu_stockHawk_btn">STOCK HAWK</string>
    <string name="menu_buildItBetter_btn">BUILD IT BIGGER</string>
    <string name="menu_makeAppMaterial_btn">MAKE YOUR APP MATERIAL</string>
    <string name="menu_goUbiquitous_btn">GO UBIQUITOUS</string>
    <string name="menu_capstone_btn">CAPSTONE</string>

</resources>
